<resources>
    <string name="app_name">Can Reader</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="global_text_not_connected">Veuillez appuyer sur le bouton READ</string>
    <string name="global_button_envoyer"> Envoyer </string>
    <string name="imu_name">IMU</string>
    <string name="imu_accel_title">Accel</string>
    <string name="imu_x">X:</string>
    <string name="imu_y">Y:</string>
    <string name="imu_z">Z:</string>
    <string name="imu_accel_x_resp">&#8230;</string>
    <string name="imu_accel_y_resp">&#8230;</string>
    <string name="imu_accel_z_resp">&#8230;</string>
    <string name="imu_gyro_title">Gyro</string>
    <string name="imu_gyro_x_resp">&#8230;</string>
    <string name="imu_gyro_y_resp">&#8230;</string>
    <string name="imu_gyro_z_resp">&#8230;</string>
    <string name="imu_magneto_title">Magneto</string>
    <string name="imu_magneto_x_resp">&#8230;</string>
    <string name="imu_magneto_y_resp">&#8230;</string>
    <string name="imu_magneto_z_resp">&#8230;</string>
    <string name="imu_freq_magneto">&#8230;</string>
    <string name="imu_freq_gyro">&#8230;</string>
    <string name="imu_freq_accel">&#8230;</string>
    <string name="imu_resmng_title">ResMng:</string>
    <string name="imu_resmng_resp">&#8230;</string>
    <string name="imu_button_tempe">Tempé:</string>
    <string name="imu_button_tempe_resp">&#8230;</string>
    <string name="imu_button_board">Board:</string>
    <string name="imu_button_board_resp">&#8230;</string>
    <string name="imu_rev_title">Rev:</string>
    <string name="imu_rev_resp">&#8230;</string>
    <string name="imu_button_version">Version:</string>
    <string name="imu_button_version_maj_resp">Maj</string>
    <string name="imu_button_version_min_resp">Min</string>
    <string name="imu_gps_title">GPS</string>
    <string name="imu_gps_1_resp">&#8230;</string>
    <string name="imu_gps_2_resp">&#8230;</string>
    <string name="imu_gps_3_resp">&#8230;</string>
    <string name="imu_gps_4_resp">&#8230;</string>
    <string name="imu_button_read">READ</string>
    <string name="imu_button_quit">Quitter</string>
    <string name="gsm_name">GSM</string>
    <string name="gsm_display_sms">>affichage des sms &#8230;</string>
    <string name="gsm_button_read_sms">Lire les sms</string>
    <string name="gsm_button_custom">CUSTOM</string>
    <string name="gsm_button_send_sms">Envoyer un sms</string>
    <string name="gsm_button_config">CONFIG</string>
    <string name="gsm_button_config2">CONFIG2</string>
    <string name="gsm_button_status">STATUT</string>
    <string name="gsm_button_pin">PIN</string>
    <string name="ihm_name">IHM</string>
    <string name="ihm_button_envoi_affichage">Envoi commande affichage</string>
    <string name="ihm_button_envoi_buzzer">Envoi commande buzzer</string>
    <string name="ihm_button_clavier">Clavier</string>
    <string name="ihm_button_clavier_resp">&#8230;</string>
    <string name="ihm_button_led">LED</string>
    <string name="ihm_button_led_resp">&#8230;</string>
    <string name="ihm_button_contraste">Contraste %</string>
    <string name="ihm_button_contraste_resp">&#8230;</string>
    <string name="ihm_button_backlight">Retro-eclairage %</string>
    <string name="ihm_button_backlight_resp">&#8230;</string>
    <string name="ihm_button_statut">Statut:</string>
    <string name="ihm_button_statut_resp">&#8230;</string>
    <string name="ihm_button_version">version:</string>
    <string name="ihm_button_version_maj_resp">Maj</string>
    <string name="ihm_button_version_min_resp">Min</string>
    <string name="ihm_button_board">board: </string>
    <string name="ihm_button_board_resp">&#8230;</string>
    <string name="ihm_button_rev">Rev:</string>
    <string name="ihm_button_rev_resp">&#8230;</string>
    <string name="verin_odo_name">VERIN et ODO</string>
    <string name="verin_button_position">Position %</string>
    <string name="verin_button_position_resp">&#8230;</string>
    <string name="verin_button_commande">Commande vérin</string>
    <string name="verin_button_commande_resp">&#8230;</string>
    <string name="verin_button_retour">Retour position %:</string>
    <string name="verin_button_retour_resp">&#8230;</string>
    <string name="verin_etat_verin_title">Etat verin:</string>
    <string name="verin_etat_verin_resp">&#8230;</string>
    <string name="odo_lecture_title">Lecture ODO :</string>
    <string name="odo_lecture_resp">&#8230;</string>
    <string name="odo_instruction">Pour tester la gauche et la droite des odo, appuyez sur le bouton \"reset compteur\" puis faites une belle courbe vers la gauche, si les valeurs de AVD et ARD sont supérieures à AVG et ARG, alors les odo sont bien montés </string>
    <string name="odo_button_reset">Reset compteur</string>
    <string name="odo_button_reset_resp">&#8230;</string>
    <string name="verin_odo_button_version">Version :</string>
    <string name="verin_odo_button_version_maj_resp">Maj</string>
    <string name="verin_odo_button_version_min_resp">Min</string>
    <string name="tension_tempe_name">TENSION et TEMPE</string>
    <string name="tempe_cpu_title">Température CPU:</string>
    <string name="tempe_cpu_resp">&#8230;</string>
    <string name="tension_button_tension_1">Tension :</string>
    <string name="tension_24v_title">24V:</string>
    <string name="tension_24v_resp">&#8230;</string>
    <string name="tension_pile_title">Pile:</string>
    <string name="tension_pile_resp">&#8230;</string>
    <string name="tension_button_tension_2">Tension:</string>
    <string name="tension_12v_title">12V:</string>
    <string name="tension_12v_resp">&#8230;</string>
    <string name="tension_33v_title">3,3V:</string>
    <string name="tension_33v_resp">&#8230;</string>
    <string name="tension_5v_title">5V:</string>
    <string name="tension_5v_resp">&#8230;</string>
    <string name="tension_flag_title">Flag sortie 12V:</string>
    <string name="tension_flag_resp">&#8230;</string>
    <string name="erreur_name">Historique des erreurs CAN</string>
    <string name="erreur_display">&#8230;</string>
    <string name="erreur_button_supprimer">Supprimer</string>
    <string name="erreur_button_actualiser">Actualiser</string>
    <string name="clavier_title">Clavier</string>
    <string name="clavier_button_valider"> Valider </string>
    <string name="clavier_button_annuler"> Annuler </string>
    <string name="clavier_button_haut"> Haut </string>
    <string name="clavier_button_bas"> Bas </string>
    <string name="clavier_button_gauche"> Gauche </string>
    <string name="clavier_button_droite"> Droite </string>
    <string name="clavier_button_quitter"> Quitter </string>
    <string name="led_title_dialog">LED</string>
    <string-array name="led_etat">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="led_couleur">
        <item>rouge</item>
        <item>verte</item>
    </string-array>
    <string name="led_title">Set the LEDs</string>
    <string name="led_gauche">Led gauche :</string>
    <string name="led_2">Led 2 :</string>
    <string name="led_3">Led 3 :</string>
    <string name="led_droite">Led droite :</string>
    <string name="at_title">Custom AT command</string>
    <string name="at_beginning">AT+</string>
    <string name="at_hint">CMEE=1</string>
    <string name="pin_title">Pin</string>
    <string name="pin_hint">1234</string>
    <string name="ecran_title">Send display command</string>
    <string name="ecran_instruction">Ecrire en hexa la commande ou ecrire le texte à afficher:</string>
    <string name="ecran_hexa_hint">00</string>
    <string name="ecran_ou"> Ou </string>
    <string name="ecran_first_line_hint">   NAIO     </string>
    <string name="ecran_first_line">1ere ligne</string>
    <string name="ecran_second_line_hint">TECHNOLOGIES</string>
    <string name="ecran_second_line">2eme ligne</string>
    <string name="buzzer_title">Send buzzer command</string>
    <string name="buzzer_instruction">Ecrire en hexa la commande:</string>
    <string name="buzzer_hexa_hint">00</string>
    <string name="buzzer_button_stop">03</string>
    <string name="buzzer_button_stop_title">Stop le son</string>
    <string name="buzzer_button_joue_son">01 10 10 32</string>
    <string name="buzzer_button_joue_son_title">Joue un son à 1600Hz pendant 160 ms à 50% de volume</string>
    <string name="buzzer_button_joue_son_discontinu">02 10 10 10 02 32</string>
    <string name="buzzer_button_joue_son_discontinu_title">Joue un son discontinu a 1600Hz pendant 160ms puis 160ms silencieuse 3 fois à 50% de volume</string>
    <string name="command_verin_title">Verin command</string>
    <string name="command_position_title">Requete position</string>
    <string name="command_contrast_title">Entrer le contraste en hexa ( 00 to 64)</string>
    <string name="command_backlight_title">Entrer le retro-eclairage en hexa ( 00 to 64)</string>
    <string name="command_instruction">Ecrire en hexa la commande:</string>
    <string name="command_hint">00</string>
    <string name="info_title">INFO</string>
    <string name="info_got_it"> Got it </string>
    <string name="sms_destinataire">Destinataire:</string>
    <string name="sms_destinataire_hint">+33679451223</string>
    <string name="sms_message">Message:</string>
    <string name="sms_message_hint">ça va ?</string>
</resources>