<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="True"
        android:text="@string/sms_destinataire" />

    <EditText
        android:id="@+id/edittext_numero"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:hint="@string/sms_destinataire_hint"
        android:inputType="phone"
        android:paddingTop="20dp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_numero"
        android:paddingTop="20dp"
        android:text="@string/sms_message" />

    <EditText
        android:id="@+id/edittext_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text2"
        android:hint="@string/sms_message_hint"
        android:paddingTop="20dp" />

    <Button
        android:id="@+id/dialogButtonOK"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_message"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/global_button_envoyer" />

</RelativeLayout>