<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="True"
        android:text="@string/ecran_instruction"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/hexa1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:digits="0123456789ABCDEF"
        android:hint="@string/ecran_hexa_hint"
        android:inputType="textCapCharacters"
        android:maxLength="2"
        android:paddingTop="20dp"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/hexa2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_toRightOf="@id/hexa1"
        android:digits="0123456789ABCDEF"
        android:hint="@string/ecran_hexa_hint"
        android:inputType="textCapCharacters"
        android:maxLength="2"
        android:nextFocusLeft="@+id/hexa3"
        android:paddingTop="20dp"
        android:textSize="25dp" />

    <EditText
        android:id="@id/hexa3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_toRightOf="@id/hexa2"
        android:digits="0123456789ABCDEF"
        android:hint="@string/ecran_hexa_hint"
        android:inputType="textCapCharacters"
        android:maxLength="2"
        android:paddingTop="20dp"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/hexa3"
        android:paddingTop="20dp"
        android:text="@string/ecran_ou"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/commandecran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_toRightOf="@id/textView"
        android:hint="@string/ecran_first_line_hint"
        android:maxLength="39"
        android:paddingTop="20dp"
        android:textSize="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_toRightOf="@id/commandecran"
        android:paddingTop="20dp"
        android:text="@string/ecran_first_line"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/commandecran2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/commandecran"
        android:layout_toRightOf="@id/textView"
        android:hint="@string/ecran_second_line_hint"
        android:maxLength="39"
        android:paddingTop="20dp"
        android:textSize="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/commandecran"
        android:layout_toRightOf="@id/commandecran2"
        android:paddingTop="20dp"
        android:text="@string/ecran_second_line"
        android:textSize="25dp" />

    <Button
        android:id="@+id/dialogButtonOK"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/commandecran2"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/global_button_envoyer"
        android:textSize="25dp" />

</RelativeLayout>