<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="True"
        android:text="@string/buzzer_instruction"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/hexa1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:digits="0123456789ABCDEF"
        android:hint="@string/buzzer_hexa_hint"
        android:inputType="textCapCharacters"
        android:maxLength="2"
        android:paddingTop="20dp" />

    <EditText
        android:id="@+id/hexa2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_toRightOf="@id/hexa1"
        android:digits="0123456789ABCDEF"
        android:hint="@string/buzzer_hexa_hint"
        android:inputType="textCapCharacters"
        android:maxLength="2"
        android:nextFocusLeft="@+id/hexa3"
        android:paddingTop="20dp" />

    <EditText
        android:id="@id/hexa3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_toRightOf="@id/hexa2"
        android:digits="0123456789ABCDEF"
        android:hint="@string/buzzer_hexa_hint"
        android:inputType="textCapCharacters"
        android:maxLength="2"
        android:paddingTop="20dp" />

    <EditText
        android:id="@+id/hexa4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_toRightOf="@id/hexa3"
        android:digits="0123456789ABCDEF"
        android:hint="@string/buzzer_hexa_hint"
        android:inputType="textCapCharacters"
        android:maxLength="2"
        android:paddingTop="20dp" />

    <EditText
        android:id="@+id/hexa5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_toRightOf="@id/hexa4"
        android:digits="0123456789ABCDEF"
        android:hint="@string/buzzer_hexa_hint"
        android:inputType="textCapCharacters"
        android:maxLength="2"
        android:paddingTop="20dp" />

    <EditText
        android:id="@+id/hexa6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_toRightOf="@id/hexa5"
        android:digits="0123456789ABCDEF"
        android:hint="@string/buzzer_hexa_hint"
        android:inputType="textCapCharacters"
        android:maxLength="2"
        android:paddingTop="20dp" />

    <Button
        android:id="@+id/button_stop_son"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/hexa6"
        android:text="@string/buzzer_button_stop"
        android:textSize="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/button_stop_son"
        android:text="@string/buzzer_button_stop_title"
        android:textSize="15dp" />

    <Button
        android:id="@+id/button_joue_son"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_stop_son"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/hexa6"
        android:text="@string/buzzer_button_joue_son"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/txt_dialog_buzz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/button_joue_son"
        android:layout_below="@id/button_joue_son"
        android:text="@string/buzzer_button_joue_son_title"
        android:textSize="15dp" />

    <Button
        android:id="@+id/button_joue_son_discontinu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_dialog_buzz"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/hexa6"
        android:text="@string/buzzer_button_joue_son_discontinu"
        android:textSize="25dp" />

    <TextView
      	android:id="@+id/txt_dialog_buzz_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_joue_son_discontinu"
        android:layout_alignLeft="@id/button_joue_son_discontinu"
        android:text="@string/buzzer_button_joue_son_discontinu_title"
        android:textSize="15dp" />

    <Button
        android:id="@+id/dialogButtonOK"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_dialog_buzz_2"
        android:layout_marginRight="5dp"
        android:text="@string/global_button_envoyer"
        android:textSize="25dp" />

</RelativeLayout>